front end changes

--- a/Code/web-application-feature-mflex_new/src/ng/src/app/containers/default-layout/default-layout.component.html
+++ b/Code/web-application-feature-mflex_new/src/ng/src/app/containers/default-layout/default-layout.component.html
@@ -14,6 +14,7 @@
             <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
                 <div class="dropdown-header text-center"><strong>User</strong></div>
                 <a class="dropdown-item" href="api/saml/logout"><i class="fa fa-lock"></i> Logout</a>
+                <a class="dropdown-item" [routerLink]="['/change-password']"><i class="fa fa-lock"></i> change-password</a>
             </div>
         </li>
     </ul>
